[package]
name = "kittage"
version = "0.1.1"
authors = ["June Welker <junewelker@gmail.com>"]
edition = "2024"
rust-version = "1.85"
description = "Interact with all aspects of the kitty terminal graphics protocol"
readme = "README.md"
repository = "https://github.com/itsjunetime/kittage"
license = "MPL-2.0"
keywords = ["graphics", "kitty", "terminal"]
categories = ["graphics", "multimedia::images", "command-line-interface"]
exclude = ["kitty_errors.md", "kitty.png"]

[dependencies]
base64-simd = "0.8"
thiserror = "2.0"
crossterm = { version = "0.29", default-features = false, features = ["event-stream", "bracketed-paste"], optional = true }
futures-core = { version = "0.3.31", optional = true }
tokio = { version = "1", default-features = false, features = ["time"], optional = true }
image = { version = "0.25", default-features = false, optional = true }
memchr = "2.7.5"
log = { version = "0.4.27", optional = true }

[target.'cfg(unix)'.dependencies]
psx-shm = "0.2"
# psx-shm = { path = "../psx-shm/" }
memmap2 = "0.9"
rustix = { version = "1", default-features = false, features = ["shm"] }

[target.'cfg(windows)'.dependencies]
winmmf = "0.5"

[features]
default = []
crossterm-tokio = ["dep:crossterm", "dep:futures-core", "dep:tokio"]
image-crate = ["dep:image"]
log = ["dep:log"]

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["time", "macros", "rt-multi-thread"] }
crossterm = { version = "0.29", default-features = false, features = ["event-stream", "bracketed-paste"] }
futures-core = "0.3"
nix = { version = "0.30", features = ["fs"] }
image = { version = "0.25", features = ["png"] }
flate2 = { version = "1", features = ["zlib-rs"] }
serial_test = "3"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
uninlined_format_args = "warn"
redundant_closure_for_method_calls = "warn"
cast_lossless = "warn"
single_char_pattern = "warn"
manual_let_else = "warn"
ignored_unit_patterns = "warn"
range_plus_one = "warn"
unreadable_literal = "warn"
redundant_else = "warn"
assigning_clones = "warn"
bool_to_int_with_if = "warn"
borrow_as_ptr = "warn"
cast_ptr_alignment = "warn"
checked_conversions = "warn"
copy_iterator = "warn"
default_trait_access = "warn"
doc_link_with_quotes = "warn"
doc_broken_link = "warn"
doc_comment_double_space_linebreaks = "warn"
doc_markdown = "warn"
empty_enums = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
implicit_clone = "warn"
index_refutable_slice = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
iter_not_returning_iterator = "warn"
large_futures = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
linkedlist = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
manual_is_power_of_two = "warn"
manual_is_variant_and = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
many_single_char_names = "warn"
manual_unwrap_or = "warn"
match_same_arms = "warn"
match_wildcard_for_single_variants = "warn"
maybe_infinite_iter = "warn"
mismatching_type_param_order = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_fields_in_debug = "warn"
mut_mut = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_value = "warn"
needless_raw_string_hashes = "warn"
no_effect_underscore_binding = "warn"
no_mangle_with_rust_abi = "warn"
option_as_ref_cloned = "warn"
option_option = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
range_minus_one = "warn"
ref_as_ptr = "warn"
ref_binding_to_reference = "warn"
ref_option = "warn"
ref_option_ref = "warn"
return_self_not_must_use = "warn"
same_functions_in_if_condition = "warn"
should_panic_without_expect = "warn"
similar_names = "warn"
stable_sort_primitive = "warn"
str_split_at_newline = "warn"
struct_excessive_bools = "warn"
struct_field_names = "warn"
transmute_ptr_to_ptr = "warn"
trivially_copy_pass_by_ref = "warn"
unicode_not_nfc = "warn"
unnecessary_box_returns = "warn"
unnecessary_join = "warn"
unnecessary_literal_bound = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_wraps = "warn"
unnested_or_patterns = "warn"
unused_async = "warn"
unused_self = "warn"
used_underscore_binding = "warn"
used_underscore_items = "warn"
zero_sized_map_values = "warn"

[lints.rustdoc]
missing_crate_level_docs = "warn"
unescaped_backticks = "warn"
